fix alignment in each person page

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -19,7 +19,7 @@
   flex-direction: column;
 }
 
-.article-style {
+.col-lg-12 .article-style {
   text-align: right;
 }
 
